--- a/index.html
+++ b/index.html
@@ -3,81 +3,84 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nelar Street Foods</title>
+  <title>Nelar Menu</title>
   <link rel="stylesheet" href="styles.css">
   <!-- Font Awesome for Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-  <!-- HEADER -->
-  <header>
-    <div class="logo">
-      <i class="fa-solid fa-utensils logo-icon"></i>
-      <span class="logo-type">Nelar</span>
-    </div>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#menu">Menu</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
-
-  <!-- HERO -->
-  <section class="hero">
-    <h1>Welcome to Nelar Street Foods</h1>
-    <p>Authentic Kenyan street flavors served fresh every day.</p>
-    <a href="#menu" class="btn">View Our Menu</a>
-  </section>
-
-  <!-- ABOUT -->
-  <section id="about" class="about container">
-    <h2>About Us</h2>
-    <p>At Nelar, we bring the taste of Kenyan streets to your table — from spicy mutura, crispy bhajia, to juicy nyama choma. Affordable, authentic, unforgettable.</p>
-  </section>
 
   <!-- MENU -->
   <section id="menu" class="menu container">
-    <h2><i class="fa-solid fa-bowl-food"></i> Our Menu</h2>
+    <h2><i class="fa-solid fa-bowl-food"></i> Nelar Menu</h2>
     <div class="menu-grid">
+      <!-- Bhajia -->
       <div class="menu-item">
-        <img src="https://images.unsplash.com/photo-1617196037304-5c16a491061b?auto=format&fit=crop&w=600&q=80" alt="Samosa">
-        <h3>Samosa</h3>
-        <p>KSH 100</p>
-      </div>
-      <div class="menu-item">
-        <img src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092?auto=format&fit=crop&w=600&q=80" alt="Bhajia">
+        <img src="https://images.unsplash.com/photo-1625941654171-4b6fdadd587a?auto=format&fit=crop&w=600&q=80" alt="Bhajia">
         <h3>Bhajia</h3>
         <p>KSH 150</p>
       </div>
+      <!-- Samosa -->
       <div class="menu-item">
-        <img src="https://images.unsplash.com/photo-1606788075761-11b27eb98bb0?auto=format&fit=crop&w=600&q=80" alt="Nyama Choma">
-        <h3>Nyama Choma</h3>
-        <p>KSH 500</p>
+        <img src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092?auto=format&fit=crop&w=600&q=80" alt="Samosa">
+        <h3>Samosa</h3>
+        <p>KSH 100</p>
       </div>
+      <!-- Mutura -->
       <div class="menu-item">
         <img src="https://images.unsplash.com/photo-1625941654171-4b6fdadd587a?auto=format&fit=crop&w=600&q=80" alt="Mutura">
         <h3>Mutura</h3>
         <p>KSH 200</p>
       </div>
+      <!-- Chips Masala -->
       <div class="menu-item">
         <img src="https://images.unsplash.com/photo-1608032079181-761c54c20c9a?auto=format&fit=crop&w=600&q=80" alt="Chips Masala">
         <h3>Chips Masala</h3>
         <p>KSH 250</p>
       </div>
+      <!-- Nyama Choma -->
+      <div class="menu-item">
+        <img src="https://images.unsplash.com/photo-1600891964097-4316c288032e?auto=format&fit=crop&w=600&q=80" alt="Nyama Choma">
+        <h3>Nyama Choma</h3>
+        <p>KSH 800 (1/2 kg)</p>
+      </div>
+      <!-- Ugali & Sukuma -->
+      <div class="menu-item">
+        <img src="https://images.unsplash.com/photo-1656041214226-cf44d10b191d?auto=format&fit=crop&w=600&q=80" alt="Ugali & Sukuma">
+        <h3>Ugali & Sukuma</h3>
+        <p>KSH 200</p>
+      </div>
+      <!-- Pilau -->
+      <div class="menu-item">
+        <img src="https://images.unsplash.com/photo-1627308595186-e6bb5e3d95f4?auto=format&fit=crop&w=600&q=80" alt="Pilau">
+        <h3>Pilau</h3>
+        <p>KSH 350</p>
+      </div>
+      <!-- Chapati -->
+      <div class="menu-item">
+        <img src="https://images.unsplash.com/photo-1658532249195-c72b7a73cb74?auto=format&fit=crop&w=600&q=80" alt="Chapati">
+        <h3>Chapati</h3>
+        <p>KSH 40 (per piece)</p>
+      </div>
+      <!-- Mandazi -->
+      <div class="menu-item">
+        <img src="https://images.unsplash.com/photo-1633436392675-07ebdbfc0a76?auto=format&fit=crop&w=600&q=80" alt="Mandazi">
+        <h3>Mandazi</h3>
+        <p>KSH 30 (per piece)</p>
+      </div>
+      <!-- Githeri -->
+      <div class="menu-item">
+        <img src="https://images.unsplash.com/photo-1659042827202-fc4a48c19e3e?auto=format&fit=crop&w=600&q=80" alt="Githeri">
+        <h3>Githeri</h3>
+        <p>KSH 250</p>
+      </div>
     </div>
-  </section>
-
-  <!-- CONTACT -->
-  <section id="contact" class="contact container">
-    <h2><i class="fa-solid fa-phone"></i> Contact Us</h2>
-    <p><i class="fa-solid fa-map-marker-alt"></i> Nairobi, Kenya</p>
-    <p><i class="fa-solid fa-phone"></i> +254 700 123456</p>
-    <p><i class="fa-solid fa-envelope"></i> info@nelarfoods.com</p>
   </section>
 
   <!-- FOOTER -->
   <footer>
     <p>&copy; 2025 Nelar Street Foods. All rights reserved.</p>
   </footer>
+
 </body>
 </html>
