--- a/index.html
+++ b/index.html
@@ -1,86 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nelar Menu</title>
-  <link rel="stylesheet" href="styles.css">
-  <!-- Font Awesome for Icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Nelar — Menu</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <main class="page">
+    <header class="site-header">
+      <div class="brand">
+        <div class="logo-circle">N</div>
+        <div class="brand-text">
+          <h1>Nelar</h1>
+          <p class="tag">Street Bites — Nairobi</p>
+        </div>
+      </div>
+    </header>
 
-  <!-- MENU -->
-  <section id="menu" class="menu container">
-    <h2><i class="fa-solid fa-bowl-food"></i> Nelar Menu</h2>
-    <div class="menu-grid">
-      <!-- Bhajia -->
-      <div class="menu-item">
-        <img src="https://images.unsplash.com/photo-1625941654171-4b6fdadd587a?auto=format&fit=crop&w=600&q=80" alt="Bhajia">
-        <h3>Bhajia</h3>
-        <p>KSH 150</p>
-      </div>
-      <!-- Samosa -->
-      <div class="menu-item">
-        <img src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092?auto=format&fit=crop&w=600&q=80" alt="Samosa">
-        <h3>Samosa</h3>
-        <p>KSH 100</p>
-      </div>
-      <!-- Mutura -->
-      <div class="menu-item">
-        <img src="https://images.unsplash.com/photo-1625941654171-4b6fdadd587a?auto=format&fit=crop&w=600&q=80" alt="Mutura">
-        <h3>Mutura</h3>
-        <p>KSH 200</p>
-      </div>
-      <!-- Chips Masala -->
-      <div class="menu-item">
-        <img src="https://images.unsplash.com/photo-1608032079181-761c54c20c9a?auto=format&fit=crop&w=600&q=80" alt="Chips Masala">
-        <h3>Chips Masala</h3>
-        <p>KSH 250</p>
-      </div>
-      <!-- Nyama Choma -->
-      <div class="menu-item">
-        <img src="https://images.unsplash.com/photo-1600891964097-4316c288032e?auto=format&fit=crop&w=600&q=80" alt="Nyama Choma">
-        <h3>Nyama Choma</h3>
-        <p>KSH 800 (1/2 kg)</p>
-      </div>
-      <!-- Ugali & Sukuma -->
-      <div class="menu-item">
-        <img src="https://images.unsplash.com/photo-1656041214226-cf44d10b191d?auto=format&fit=crop&w=600&q=80" alt="Ugali & Sukuma">
-        <h3>Ugali & Sukuma</h3>
-        <p>KSH 200</p>
-      </div>
-      <!-- Pilau -->
-      <div class="menu-item">
-        <img src="https://images.unsplash.com/photo-1627308595186-e6bb5e3d95f4?auto=format&fit=crop&w=600&q=80" alt="Pilau">
-        <h3>Pilau</h3>
-        <p>KSH 350</p>
-      </div>
-      <!-- Chapati -->
-      <div class="menu-item">
-        <img src="https://images.unsplash.com/photo-1658532249195-c72b7a73cb74?auto=format&fit=crop&w=600&q=80" alt="Chapati">
-        <h3>Chapati</h3>
-        <p>KSH 40 (per piece)</p>
-      </div>
-      <!-- Mandazi -->
-      <div class="menu-item">
-        <img src="https://images.unsplash.com/photo-1633436392675-07ebdbfc0a76?auto=format&fit=crop&w=600&q=80" alt="Mandazi">
-        <h3>Mandazi</h3>
-        <p>KSH 30 (per piece)</p>
-      </div>
-      <!-- Githeri -->
-      <div class="menu-item">
-        <img src="https://images.unsplash.com/photo-1659042827202-fc4a48c19e3e?auto=format&fit=crop&w=600&q=80" alt="Githeri">
-        <h3>Githeri</h3>
-        <p>KSH 250</p>
-      </div>
-    </div>
-  </section>
+    <section id="menu" class="menu-list">
+      <!-- Each .menu-row is one stacked item (image + details) -->
+      <article class="menu-row">
+        <img src="assets/01_bhajia.jpg" alt="Bhajia">
+        <div class="meta"><h2>Bhajia</h2><span class="price">KSh 150</span></div>
+      </article>
 
-  <!-- FOOTER -->
-  <footer>
-    <p>&copy; 2025 Nelar Street Foods. All rights reserved.</p>
-  </footer>
+      <article class="menu-row">
+        <img src="assets/02_samosa.jpg" alt="Samosa">
+        <div class="meta"><h2>Samosa</h2><span class="price">KSh 100</span></div>
+      </article>
 
+      <article class="menu-row">
+        <img src="assets/03_mutura.jpg" alt="Mutura">
+        <div class="meta"><h2>Mutura</h2><span class="price">KSh 200</span></div>
+      </article>
+
+      <article class="menu-row">
+        <img src="assets/04_mahindi_choma.jpg" alt="Mahindi Choma">
+        <div class="meta"><h2>Mahindi Choma</h2><span class="price">KSh 40</span></div>
+      </article>
+
+      <article class="menu-row">
+        <img src="assets/05_mshikaki.jpg" alt="Mshikaki">
+        <div class="meta"><h2>Mshikaki</h2><span class="price">KSh 80 (per stick)</span></div>
+      </article>
+
+      <article class="menu-row">
+        <img src="assets/06_chipo_mwitu.jpg" alt="Chipo Mwitu">
+        <div class="meta"><h2>Chipo Mwitu (Street Fries)</h2><span class="price">KSh 120</span></div>
+      </article>
+
+      <article class="menu-row">
+        <img src="assets/07_nyama_choma.jpg" alt="Nyama Choma">
+        <div class="meta"><h2>Nyama Choma (¼ kg)</h2><span class="price">KSh 350</span></div>
+      </article>
+
+      <article class="menu-row">
+        <img src="assets/08_pilau.jpg" alt="Pilau">
+        <div class="meta"><h2>Pilau Plate</h2><span class="price">KSh 300</span></div>
+      </article>
+
+      <article class="menu-row">
+        <img src="assets/09_ugali_sukuma.jpg" alt="Ugali & Sukuma">
+        <div class="meta"><h2>Ugali & Sukuma</h2><span class="price">KSh 180</span></div>
+      </article>
+
+      <article class="menu-row">
+        <img src="assets/10_chapati.jpg" alt="Chapati">
+        <div class="meta"><h2>Chapati (each)</h2><span class="price">KSh 40</span></div>
+      </article>
+
+      <article class="menu-row">
+        <img src="assets/11_mandazi.jpg" alt="Mandazi">
+        <div class="meta"><h2>Mandazi</h2><span class="price">KSh 30</span></div>
+      </article>
+
+      <article class="menu-row">
+        <img src="assets/12_githeri.jpg" alt="Githeri">
+        <div class="meta"><h2>Githeri</h2><span class="price">KSh 220</span></div>
+      </article>
+
+      <article class="menu-row">
+        <img src="assets/13_viazi_karai.jpg" alt="Viazi Karai">
+        <div class="meta"><h2>Viazi Karai</h2><span class="price">KSh 60</span></div>
+      </article>
+
+      <article class="menu-row">
+        <img src="assets/14_kachumbari.jpg" alt="Kachumbari">
+        <div class="meta"><h2>Kachumbari (side)</h2><span class="price">KSh 40</span></div>
+      </article>
+
+      <article class="menu-row">
+        <img src="assets/15_pork_ribs.jpg" alt="Pork Ribs">
+        <div class="meta"><h2>Pork Ribs (plate)</h2><span class="price">KSh 450</span></div>
+      </article>
+
+      <article class="menu-row">
+        <img src="assets/16_smokie.jpg" alt="Smokie Pasua">
+        <div class="meta"><h2>Smokie Pasua</h2><span class="price">KSh 50</span></div>
+      </article>
+    </section>
+
+    <footer class="site-footer">
+      <p>© <span id="year"></span> Nelar • Authentic Kenyan Street Food</p>
+    </footer>
+  </main>
+
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
