--- a/index.html
+++ b/index.html
@@ -1,113 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Nelar — Menu</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Nelar Street Foods</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <main class="page">
-    <header class="site-header">
-      <div class="brand">
-        <div class="logo-circle">N</div>
-        <div class="brand-text">
-          <h1>Nelar</h1>
-          <p class="tag">Street Bites — Nairobi</p>
-        </div>
+
+  <!-- HEADER -->
+  <header class="hero">
+    <div class="overlay">
+      <nav class="navbar">
+        <div class="logo">Nelar</div>
+        <ul class="nav-links">
+          <li><a href="#menu">Menu</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+      <div class="hero-text">
+        <h1>Welcome to Nelar</h1>
+        <p>The taste of authentic Kenyan street food</p>
       </div>
-    </header>
+    </div>
+  </header>
 
-    <section id="menu" class="menu-list">
-      <!-- Each .menu-row is one stacked item (image + details) -->
-      <article class="menu-row">
-        <img src="assets/01_bhajia.jpg" alt="Bhajia">
-        <div class="meta"><h2>Bhajia</h2><span class="price">KSh 150</span></div>
-      </article>
+  <!-- MENU -->
+  <section id="menu" class="menu-section">
+    <h2>Our Menu</h2>
 
-      <article class="menu-row">
-        <img src="assets/02_samosa.jpg" alt="Samosa">
-        <div class="meta"><h2>Samosa</h2><span class="price">KSh 100</span></div>
-      </article>
+    <!-- SNACKS -->
+    <h3>Snacks</h3>
+    <div class="menu-grid">
+      <div class="menu-item">
+        <img src="images/bhajia.jpg" alt="Bhajia">
+        <h4>Bhajia</h4>
+        <p>Ksh 150</p>
+      </div>
+      <div class="menu-item">
+        <img src="images/samosa.jpg" alt="Samosa">
+        <h4>Samosa</h4>
+        <p>Ksh 80</p>
+      </div>
+      <div class="menu-item">
+        <img src="images/mutura.jpg" alt="Mutura">
+        <h4>Mutura</h4>
+        <p>Ksh 100</p>
+      </div>
+    </div>
 
-      <article class="menu-row">
-        <img src="assets/03_mutura.jpg" alt="Mutura">
-        <div class="meta"><h2>Mutura</h2><span class="price">KSh 200</span></div>
-      </article>
+    <!-- MAIN DISHES -->
+    <h3>Main Dishes</h3>
+    <div class="menu-grid">
+      <div class="menu-item">
+        <img src="images/ugali-sukuma.jpg" alt="Ugali & Sukuma">
+        <h4>Ugali & Sukuma</h4>
+        <p>Ksh 200</p>
+      </div>
+      <div class="menu-item">
+        <img src="images/pilau.jpg" alt="Pilau">
+        <h4>Pilau</h4>
+        <p>Ksh 300</p>
+      </div>
+      <div class="menu-item">
+        <img src="images/githeri.jpg" alt="Githeri">
+        <h4>Githeri</h4>
+        <p>Ksh 250</p>
+      </div>
+    </div>
 
-      <article class="menu-row">
-        <img src="assets/04_mahindi_choma.jpg" alt="Mahindi Choma">
-        <div class="meta"><h2>Mahindi Choma</h2><span class="price">KSh 40</span></div>
-      </article>
+    <!-- GRILLS -->
+    <h3>Grills</h3>
+    <div class="menu-grid">
+      <div class="menu-item">
+        <img src="images/nyama-choma.jpg" alt="Nyama Choma">
+        <h4>Nyama Choma</h4>
+        <p>Ksh 600</p>
+      </div>
+      <div class="menu-item">
+        <img src="images/chips-masala.jpg" alt="Chips Masala">
+        <h4>Chips Masala</h4>
+        <p>Ksh 250</p>
+      </div>
+      <div class="menu-item">
+        <img src="images/chapati.jpg" alt="Chapati">
+        <h4>Chapati (2 pcs)</h4>
+        <p>Ksh 80</p>
+      </div>
+    </div>
 
-      <article class="menu-row">
-        <img src="assets/05_mshikaki.jpg" alt="Mshikaki">
-        <div class="meta"><h2>Mshikaki</h2><span class="price">KSh 80 (per stick)</span></div>
-      </article>
+    <!-- DRINKS -->
+    <h3>Drinks</h3>
+    <div class="menu-grid">
+      <div class="menu-item">
+        <img src="images/drinks.jpg" alt="Soda">
+        <h4>Soft Drinks</h4>
+        <p>Ksh 80</p>
+      </div>
+      <div class="menu-item">
+        <img src="images/drinks.jpg" alt="Fresh Juice">
+        <h4>Fresh Juice</h4>
+        <p>Ksh 150</p>
+      </div>
+    </div>
 
-      <article class="menu-row">
-        <img src="assets/06_chipo_mwitu.jpg" alt="Chipo Mwitu">
-        <div class="meta"><h2>Chipo Mwitu (Street Fries)</h2><span class="price">KSh 120</span></div>
-      </article>
+    <!-- DESSERTS -->
+    <h3>Desserts</h3>
+    <div class="menu-grid">
+      <div class="menu-item">
+        <img src="images/mandazi.jpg" alt="Mandazi">
+        <h4>Mandazi</h4>
+        <p>Ksh 100</p>
+      </div>
+      <div class="menu-item">
+        <img src="images/dessert.jpg" alt="Ice Cream">
+        <h4>Ice Cream</h4>
+        <p>Ksh 200</p>
+      </div>
+    </div>
 
-      <article class="menu-row">
-        <img src="assets/07_nyama_choma.jpg" alt="Nyama Choma">
-        <div class="meta"><h2>Nyama Choma (¼ kg)</h2><span class="price">KSh 350</span></div>
-      </article>
+  </section>
 
-      <article class="menu-row">
-        <img src="assets/08_pilau.jpg" alt="Pilau">
-        <div class="meta"><h2>Pilau Plate</h2><span class="price">KSh 300</span></div>
-      </article>
+  <!-- FOOTER -->
+  <footer id="contact">
+    <p>📍 Nairobi, Kenya | 📞 +254 700 123456 | ✉ info@nelar.co.ke</p>
+    <p>&copy; 2025 Nelar Street Foods</p>
+  </footer>
 
-      <article class="menu-row">
-        <img src="assets/09_ugali_sukuma.jpg" alt="Ugali & Sukuma">
-        <div class="meta"><h2>Ugali & Sukuma</h2><span class="price">KSh 180</span></div>
-      </article>
-
-      <article class="menu-row">
-        <img src="assets/10_chapati.jpg" alt="Chapati">
-        <div class="meta"><h2>Chapati (each)</h2><span class="price">KSh 40</span></div>
-      </article>
-
-      <article class="menu-row">
-        <img src="assets/11_mandazi.jpg" alt="Mandazi">
-        <div class="meta"><h2>Mandazi</h2><span class="price">KSh 30</span></div>
-      </article>
-
-      <article class="menu-row">
-        <img src="assets/12_githeri.jpg" alt="Githeri">
-        <div class="meta"><h2>Githeri</h2><span class="price">KSh 220</span></div>
-      </article>
-
-      <article class="menu-row">
-        <img src="assets/13_viazi_karai.jpg" alt="Viazi Karai">
-        <div class="meta"><h2>Viazi Karai</h2><span class="price">KSh 60</span></div>
-      </article>
-
-      <article class="menu-row">
-        <img src="assets/14_kachumbari.jpg" alt="Kachumbari">
-        <div class="meta"><h2>Kachumbari (side)</h2><span class="price">KSh 40</span></div>
-      </article>
-
-      <article class="menu-row">
-        <img src="assets/15_pork_ribs.jpg" alt="Pork Ribs">
-        <div class="meta"><h2>Pork Ribs (plate)</h2><span class="price">KSh 450</span></div>
-      </article>
-
-      <article class="menu-row">
-        <img src="assets/16_smokie.jpg" alt="Smokie Pasua">
-        <div class="meta"><h2>Smokie Pasua</h2><span class="price">KSh 50</span></div>
-      </article>
-    </section>
-
-    <footer class="site-footer">
-      <p>© <span id="year"></span> Nelar • Authentic Kenyan Street Food</p>
-    </footer>
-  </main>
-
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
 </body>
 </html>
