--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nelar Street Foods</title>
+  <title>Nelar Street Kitchen</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
+  <!-- Font Awesome for icons -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
 
-  <!-- HEADER -->
+  <!-- HERO SECTION -->
   <header class="hero">
     <div class="overlay">
       <nav class="navbar">
-        <div class="logo">Nelar</div>
+        <div class="logo"><i class="fa-solid fa-drumstick-bite"></i> Nelar</div>
         <ul class="nav-links">
           <li><a href="#menu">Menu</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -21,57 +22,35 @@
       </nav>
       <div class="hero-text">
         <h1>Welcome to Nelar</h1>
-        <p>The taste of authentic Kenyan street food</p>
+        <p>Authentic Street Food in the Heart of Nairobi</p>
       </div>
     </div>
   </header>
 
-  <!-- MENU -->
+  <!-- MENU SECTION -->
   <section id="menu" class="menu-section">
-    <h2>Our Menu</h2>
+    <h2><i class="fa-solid fa-utensils"></i> Our Menu</h2>
 
-    <!-- SNACKS -->
-    <h3>Snacks</h3>
+    <h3><i class="fa-solid fa-bowl-food"></i> Starters</h3>
     <div class="menu-grid">
-      <div class="menu-item">
-        <img src="images/bhajia.jpg" alt="Bhajia">
-        <h4>Bhajia</h4>
-        <p>Ksh 150</p>
-      </div>
       <div class="menu-item">
         <img src="images/samosa.jpg" alt="Samosa">
         <h4>Samosa</h4>
         <p>Ksh 80</p>
       </div>
       <div class="menu-item">
+        <img src="images/bhajia.jpg" alt="Bhajia">
+        <h4>Bhajia</h4>
+        <p>Ksh 150</p>
+      </div>
+      <div class="menu-item">
         <img src="images/mutura.jpg" alt="Mutura">
         <h4>Mutura</h4>
-        <p>Ksh 100</p>
+        <p>Ksh 120</p>
       </div>
     </div>
 
-    <!-- MAIN DISHES -->
-    <h3>Main Dishes</h3>
-    <div class="menu-grid">
-      <div class="menu-item">
-        <img src="images/ugali-sukuma.jpg" alt="Ugali & Sukuma">
-        <h4>Ugali & Sukuma</h4>
-        <p>Ksh 200</p>
-      </div>
-      <div class="menu-item">
-        <img src="images/pilau.jpg" alt="Pilau">
-        <h4>Pilau</h4>
-        <p>Ksh 300</p>
-      </div>
-      <div class="menu-item">
-        <img src="images/githeri.jpg" alt="Githeri">
-        <h4>Githeri</h4>
-        <p>Ksh 250</p>
-      </div>
-    </div>
-
-    <!-- GRILLS -->
-    <h3>Grills</h3>
+    <h3><i class="fa-solid fa-drumstick-bite"></i> Mains</h3>
     <div class="menu-grid">
       <div class="menu-item">
         <img src="images/nyama-choma.jpg" alt="Nyama Choma">
@@ -84,49 +63,40 @@
         <p>Ksh 250</p>
       </div>
       <div class="menu-item">
-        <img src="images/chapati.jpg" alt="Chapati">
-        <h4>Chapati (2 pcs)</h4>
-        <p>Ksh 80</p>
+        <img src="images/chicken-fry.jpg" alt="Chicken Fry">
+        <h4>Chicken Fry</h4>
+        <p>Ksh 500</p>
       </div>
     </div>
 
-    <!-- DRINKS -->
-    <h3>Drinks</h3>
+    <h3><i class="fa-solid fa-mug-hot"></i> Drinks</h3>
     <div class="menu-grid">
       <div class="menu-item">
-        <img src="images/drinks.jpg" alt="Soda">
-        <h4>Soft Drinks</h4>
+        <img src="images/soda.jpg" alt="Soda">
+        <h4>Soda</h4>
         <p>Ksh 80</p>
       </div>
       <div class="menu-item">
-        <img src="images/drinks.jpg" alt="Fresh Juice">
+        <img src="images/fresh-juice.jpg" alt="Fresh Juice">
         <h4>Fresh Juice</h4>
         <p>Ksh 150</p>
       </div>
-    </div>
-
-    <!-- DESSERTS -->
-    <h3>Desserts</h3>
-    <div class="menu-grid">
       <div class="menu-item">
-        <img src="images/mandazi.jpg" alt="Mandazi">
-        <h4>Mandazi</h4>
-        <p>Ksh 100</p>
-      </div>
-      <div class="menu-item">
-        <img src="images/dessert.jpg" alt="Ice Cream">
-        <h4>Ice Cream</h4>
-        <p>Ksh 200</p>
+        <img src="images/beer.jpg" alt="Beer">
+        <h4>Beer</h4>
+        <p>Ksh 250</p>
       </div>
     </div>
-
   </section>
 
   <!-- FOOTER -->
   <footer id="contact">
-    <p>📍 Nairobi, Kenya | 📞 +254 700 123456 | ✉ info@nelar.co.ke</p>
-    <p>&copy; 2025 Nelar Street Foods</p>
+    <p><i class="fa-solid fa-location-dot"></i> Nairobi, Kenya</p>
+    <p><i class="fa-solid fa-phone"></i> +254 712 345 678</p>
+    <p><i class="fa-solid fa-envelope"></i> contact@nelar.co.ke</p>
+    <p>&copy; 2025 Nelar Street Kitchen</p>
   </footer>
 
 </body>
 </html>
+
