--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <section id="menu" class="menu-section">
     <h2><i class="fa-solid fa-utensils"></i> Our Menu</h2>
 
-    <h3><i class="fa-solid fa-bowl-food"></i> Starters</h3>
+    <h3><i class="fa-solid fa-bowl-food"></i> Light Munchies</h3>
     <div class="menu-grid">
       <div class="menu-item">
         <img src="images/samosa.jpg" alt="Samosa">
@@ -50,7 +50,7 @@
       </div>
     </div>
 
-    <h3><i class="fa-solid fa-drumstick-bite"></i> Mains</h3>
+    <h3><i class="fa-solid fa-drumstick-bite"></i> Heavy Plates</h3>
     <div class="menu-grid">
       <div class="menu-item">
         <img src="images/nyama-choma.jpg" alt="Nyama Choma">
